@@ -1,6 +1,10 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2012-07-20  Dirk Schulze  <dschulze@adobe.com>
+
+- corrections to shader part after review
+
 2012-06-27  Dirk Schulze  <dschulze@adobe.com>
 
 - corrections on mix function
